--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ captures/
 bin/jni.files/build.jni
 bin/encrypt.files/build.encrypt
 bin/encrypt.files/generated/*
-timestamp
+bin/prepare.files/timestamp
 
 
 
