Default commit message using bin/prepare.bash script.

--- a/bin/jni.files/jniDataTypes.properties
+++ b/bin/jni.files/jniDataTypes.properties
@@ -7,16 +7,16 @@ long=jlong
 float=jfloat
 double=jdouble
 java.lang.String=jstring
-java.lang.Throwable=jobject
+java.lang.Throwable=jthrowable
 *=jobject
 void=void
-*[]=jobject*
-boolean[]=jboolean*
-byte[]=jbyte*
-char[]=jchar*
-short[]=jshort*
-int[]=jint*
-long[]=jlong*
-float[]=jfloat*
-double[]=jdouble*
+*[]=jobjectArray
+boolean[]=jbooleanArray
+byte[]=jbyteArray
+char[]=jcharArray
+short[]=jshortArray
+int[]=jintArray
+long[]=jlongArray
+float[]=jfloatArray
+double[]=jdoubleArray
 java.lang.String[]=jobjectArray
