Default commit message using bin/prepare.bash script.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,265 @@ bin/prepare.files/timestamp
 
 
 
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
+--wifi
