Preparing for Jitpack distro, v1.1.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+# gradle -Puser=someuser -Pkey=ASDFASDFASDF bintrayUpload
+# gradle -Puser=cdm2012 -Pkey=8a92812bbab8c8f04f37e31cb6b64df0e471a363 bintrayUpload
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
@@ -15,3 +18,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+bintrayUser=cdm2012
+bintrayApikey=8a92812bbab8c8f04f37e31cb6b64df0e471a363
