--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath 'com.novoda:bintray-release:0.8.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +15,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+    }
+    tasks.withType(Javadoc).all {
+        enabled = false
     }
 }
 
