Passed Network Test for version: 1.1.7 - 2018-05-03

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ captures/
 */.externalNativeBuild
 
 # bash scripts / files
+demo.zip
 bin/adb.files/devices
 bin/jni.files/build.jni
 bin/encrypt.files/build.encrypt
